Update FileTreeView